unpackaged/main/default/objects/Billable_Item__c/Billable_Item__c.object-meta.xml
<CustomObject>
    <label>Billable Item</label>
    <nameField>
        <label>Billable Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billable Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>