unpackaged/main/default/objects/Billable_Item__c/fields/Billable_Item_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Billable_Item_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>