unpackaged/main/default/objects/Billable_Item__c/fields/Consultation__c.field-meta.xml
<CustomField>
    <fullName>Consultation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultation</label>
    <referenceTo>Consultation__c</referenceTo>
    <relationshipLabel>Billable Items</relationshipLabel>
    <relationshipName>Billable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>