unpackaged/main/default/objects/Billable_Item__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>Insurance_Policy__c</referenceTo>
    <relationshipLabel>Billable Items</relationshipLabel>
    <relationshipName>Billable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>