unpackaged/main/default/objects/Billable_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>