unpackaged/main/default/objects/Billable_Item__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Billable Items</relationshipLabel>
    <relationshipName>Billable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>