unpackaged/main/default/objects/Billable_Item__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billable Items (Patient)</relationshipLabel>
    <relationshipName>Billable_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>