unpackaged/main/default/objects/Billable_Item__c/fields/Prescribing_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescribing Doctor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatment_Products</relationshipName>
    <type>Lookup</type>
</CustomField>