unpackaged/main/default/objects/Billable_Item__c/fields/Prescribing_Doctor_DEPRECATE__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Doctor_DEPRECATE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescribing Doctor DEPRECATE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Provider (Individual)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Treatment_Products</relationshipName>
    <type>Lookup</type>
</CustomField>