unpackaged/main/default/objects/Billable_Item__c/fields/Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Price_Total__c</fullName>
    <formula>Billable_Item_Unit_Price__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>