unpackaged/main/default/objects/Billable_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Billable Items</relationshipLabel>
    <relationshipName>Treatment_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>