unpackaged/main/default/objects/Billable_Item__c/fields/Requires_Prescription__c.field-meta.xml
<CustomField>
    <fullName>Requires_Prescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Prescription</label>
    <type>Checkbox</type>
</CustomField>