unpackaged/main/default/objects/Billable_Item__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Supply Type = External, the Supplier Account</description>
    <inlineHelpText>If Supply Type = External, the Supplier Account</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billable Items (Supplier)</relationshipLabel>
    <relationshipName>Billable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>