unpackaged/main/default/objects/Billable_Item__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Billable Items</relationshipLabel>
    <relationshipName>Billable_Items</relationshipName>
    <type>Lookup</type>
</CustomField>