unpackaged/main/default/objects/Billable_Item__c/fields/Total_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Price__c</fullName>
    <formula>Billable_Item_Cost__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>