unpackaged/main/default/objects/Billable_Item__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Treatment</label>
    <referenceTo>Treatment__c</referenceTo>
    <relationshipLabel>Billable Items</relationshipLabel>
    <relationshipName>Treatment_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>